<resources>
    <string name="app_name">templates</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="exemple_login">Exemple Login</string>
    <string name="test">Description logo test</string>
    <string name="signin">Sign in</string>
    <string name="msg_register">Do not have an account? Register</string>
    <string name="title_activity_login_demo02">Sign in</string>
    <string name="login">LOGIN</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
